--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+4-21 [专访: 为全中国争自由 香港就不会死](/articles/dw/1025844.md)
+
 4-20 [王毅：奥库斯协议“引发严重核扩散风险”](/articles/dw/1025845.md)
 
 4-20 [蔡英文祝贺台湾变装皇后美国夺冠](/articles/dw/1025846.md)
@@ -598,6 +600,4 @@
 3-26 [中國承諾保障外資平等競爭 德企業不看好](/articles/dw/1026142.md)
 
 3-26 [英政府批评中国黑客攻击](/articles/dw/1026143.md)
-
-3-25 [防疫措施出台内幕被曝光 德国政府面临压力](/articles/dw/1026144.md)
 
