--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+4-21 [乌克兰对俄罗斯8个地区发动无人机攻击，3人丧生](/articles/voa/1016235.md)
+
 4-21 [美众院通过950亿美元援助乌克兰、以色列和台湾议案](/articles/voa/1016236.md)
 
 4-21 [中国在巴西和阿根廷之间的战略异动引起关注](/articles/voa/1016237.md)
@@ -598,6 +600,4 @@
 4-9 [菲律宾示威者抗议北京在南中国海的侵略行径，踩踏习近平假人](/articles/voa/1016533.md)
 
 4-9 [土耳其对以色列实施贸易限制，直至加沙停火](/articles/voa/1016534.md)
-
-4-9 [英国外相卡梅伦访美，敦促美方对乌克兰提供新的援助](/articles/voa/1016535.md)
 
